--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code4good",
+  "name": "peizhenshi",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -18,7 +18,5 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.3"
-  },
-  "export": "next export"
-
+  }
 }
